fix url wrapping

--- a/src/style/content.scss
+++ b/src/style/content.scss
@@ -80,6 +80,7 @@
 
 	a {
 		color: var(--text-color-link);
+		overflow-wrap: break-word;
 
 		&:hover,
 		&:focus {
